Mon Mar  1 20:06:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSAffineTransform.h: New file based on PSMatrix.h
	* Source/NSAffineTransform.m: New file based on PSMatrix.m
	* Source/NSView.m: Modified to use NSAffineTransformAffineTransform
	* Source/GNUmakefile: Added NSAffineTransform
	* Source/NSCell.m: Don't include PSMatrix.h
	* Source/NSScroller.m: Don't include PSMatrix.h
	* Source/NSView.m: Use NSAffineTransform
	* Source/NSWindow.m: Don't include PSMatrix.h

Mon Mar  1 17:12:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSCell.h: Added MacOS-X cell state constants.

Thu Feb 25 15:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Added support for the new (MacOS-X) NSGraphicsContext class by
	incorporating stuff from Adam Fedors xgps and replacing GSContext
	* Headers/AppKit/DPSOperators.h: New file
	* Headers/AppKit/PSOperators.h: New file
	* Headers/AppKit/GSMethodTable.h: New file
	* Headers/AppKit/NSGraphicsContext.h: New file
	* Source/NSGraphicsContext.m: New class implementation
	* Headers/AppKit/AppKit.h: Updated for NSGraphicsContext
	* Headers/AppKit/NSApplication.h: ditto
	* Headers/AppKit/NSEvent.h: ditto
	* Headers/AppKit/NSImage.h: ditto
	* Headers/AppKit/NSPrintOperation.h: ditto
	* Headers/AppKit/NSView.h: ditto
	* Headers/AppKit/NSWindow.h: ditto
	* Source/Functions.m: ditto
	* Source/GNUmakefile: ditto
	* Source/NSApplication.m: ditto
	* Source/NSButtonCell.m: ditto
	* Source/NSCell.m: ditto
	* Source/NSEvent.m: ditto
	* Source/NSPrintOperation.m: ditto
	* Source/NSScrollView.m: ditto
	* Source/externs.m: ditto

Wed Feb 24  Felipe A. Rodriguez  <farz@mindspring.com>

	* NSSliderCell.m: knobRectFlipped: fix draw bugs in slider.app example.

Mon Feb 22  8:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSView.m: Tidied coordinate conversion code to use new system with
	a cached conversion matrix to convert to/from window coordinates.